Use less janky jar loading method